relax page update with playlists

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           the way, I've met some amazing educators who gave me unparalleled
           instruction and opportunities, leading to my decision to double minor
           in mathematics and business analytics. While I love studying these
-          three subjects, I also have a interest for neuroscience and psychology
-          that I developed in high school.
+          three subjects, I also have an interest for neuroscience and
+          psychology that I developed in high school.
         </p>
         <p>
           This summer, I will be transitioning from the computer science world
@@ -93,9 +93,17 @@
           : a summary of educational institutions and coursework
         </p>
         <p>
+          <a href="blog.html">blog</a> : a blurb of my thoughts on random topics
+        </p>
+        <p>
+          <a href="relax.html">relax</a>: a page dedicated to links that give
+          you a break from whatever you're working on
+        </p>
+        <p>
           <a href="docs/Resume--Summer2021.docx.pdf">resume</a> : a copy of my
           resume
         </p>
+        <!--add the other page links here-->
       </section>
 
       <section>
@@ -118,7 +126,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated May 27, 2021</p>
     </footer>
   </body>
 </html>
