--- a/relax.html
+++ b/relax.html
@@ -33,15 +33,81 @@
     </header>
     <main>
       <h2 style="margin-left: 2.5rem">Relax</h2>
-      <p>
+      <p style="margin-left: 2.5rem">
         Sometimes, after a busy day, we come home and want to chill out. Here,
         I've compiled a bunch of playlists, links, articles, and other
         miscellaneous things you can spend your time exploring and taking a
         break from reality.
       </p>
+
+      <section class="normal-box" style="border: 5px solid palegreen">
+        <p style="margin-left: 1rem">
+          Playlists: click on the image that best describes the vibe you're
+          looking for
+        </p>
+        <nav>
+          <ul>
+            <a
+              href="https://open.spotify.com/playlist/1NdYW902ugwuqWBcCwbxoc?si=438bb549cb474512"
+              ><img src="img/eclipse playlist.PNG" alt="eclipse playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/1zZLXfNOzj2JgkuDMMeU4q?si=59bc2d0b743f4974"
+              ><img src="img/the weeknd playlist.PNG" alt="the weeknd playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/5lt6yMT2A1mEfvOCeoRQCw?si=13c2a906e6be41f5"
+              ><img src="img/echostage playlist.PNG" alt="echostage playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/1cc0W67000S54if13iAiIE?si=e12e6ac3b7b942a7"
+              ><img src="img/piano playlist.PNG" alt="piano playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/3AVX4zPEYgxJtTseI0foQr?si=e39a66989e364af3"
+              ><img src="img/orchestral playlist.PNG" alt="orchestral playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/4ZfbTCovtlCVE4kPOLswVV?si=f7c7251806544d5d"
+              ><img src="img/adrenaline playlist.PNG" alt="adrenaline playlist"
+            /></a>
+            <a
+              href="https://open.spotify.com/playlist/5RATcyr08kEZMsDx8qblZG?si=f349655d3feb4337"
+              ><img src="img/home playlist.PNG" alt="home playlist"
+            /></a>
+          </ul>
+        </nav>
+      </section>
+
+      <section class="normal-box" style="border: 5px solid lightskyblue">
+        <p style="margin-left: 1rem">Podcasts</p>
+        <nav>
+          <ul>
+            <a
+              href="https://open.spotify.com/show/39Dsqzio06oBQxynINAvdS?si=AqJNqjjGRfuinJzRMvEiLw"
+              >when you want to feel the chills</a
+            >
+            <p></p>
+            <a
+              href="https://open.spotify.com/show/47O23KK6EetjmhR0M5Dwwt?si=YOXL7CDxQFaGPGvMmKqdIw"
+              >to feel stronger</a
+            >
+          </ul>
+        </nav>
+      </section>
+
+      <section class="normal-box" style="border: 5px solid plum">
+        <p style="margin-left: 1rem">Articles</p>
+      </section>
+
+      <section class="normal-box" style="border: 5px solid coral">
+        <p style="margin-left: 1rem">Surf the web</p>
+      </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated May 21, 2021</p>
+      <p style="margin-left: 2.5rem">
+        Copyright &copy; Jessica Wu; updated May 27, 2021
+      </p>
     </footer>
   </body>
 </html>
