--- a/relax.html
+++ b/relax.html
@@ -98,10 +98,39 @@
 
       <section class="normal-box" style="border: 5px solid plum">
         <p style="margin-left: 1rem">Articles</p>
+        <nav>
+          <ul>
+            <a
+              href="https://www.fscu.com/learn/financial-life-guidance/financial-life-guidance-articles/intro-to-cryptocurrency"
+              >introduction to cryptocurrency</a
+            >
+            <p></p>
+            <a
+              href="https://www.discovermagazine.com/planet-earth/the-bermuda-triangle-what-science-can-tell-us-about-the-mysterious-ocean"
+              >the bermuda triangle and its mysteries</a
+            >
+            <p></p>
+            <a
+              href="https://admissions.usf.edu/blog/the-importance-of-sleep-for-college-students"
+              >the importance of sleep</a
+            >
+          </ul>
+        </nav>
       </section>
 
       <section class="normal-box" style="border: 5px solid coral">
         <p style="margin-left: 1rem">Surf the web</p>
+        <nav>
+          <ul>
+            <a href="https://www.geoguessr.com/">guess where</a>
+            <p></p>
+            <a href="https://hackertyper.net/">a fake hacker</a>
+            <p></p>
+            <a href="https://archive.org/web/">go back in time</a>
+            <p></p>
+            <a href="https://codepen.io/akm2/full/rHIsa">change gravity</a>
+          </ul>
+        </nav>
       </section>
     </main>
     <footer>
