new page, updated july

--- a/education.html
+++ b/education.html
@@ -300,11 +300,37 @@
             </ul>
           </nav>
         </section>
+
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Summer 2021</p>
+          <nav>
+            <ul>
+              <li>BMGT110: Introduction to the Business Value Chain</li>
+              <p>
+                Course Description: Students are provided with an introduction
+                to the business value chain with an emphasis on
+                inter-organizational and intra-organizational coordination of
+                core business processes. Emphasis is on cross-functional
+                integration and the efficient and effective management of core
+                processes with an emphasis on marketing, operations and supply
+                chain management.
+              </p>
+              <p>
+                Reflection: I felt like I was familiar with a lot of the
+                material to begin with. From AP Macroeconomics with Kachur and
+                my FBLA projects, the first half of the class was full of
+                content I was mostly familiar with. THe second part includes
+                financial, accounting, and promotions topics--topics I'm not
+                familiar with.
+              </p>
+            </ul>
+          </nav>
+        </section>
       </section>
     </main>
     <footer>
       <p style="margin-left: 2.5rem">
-        Copyright &copy; Jessica Wu; updated May 21, 2021
+        Copyright &copy; Jessica Wu; updated July 23, 2021
       </p>
     </footer>
   </body>
