--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           psychology that I developed in high school.
         </p>
         <p>
-          This summer, I will be transitioning from the computer science world
-          to the business world where I will be working as a marketing intern on
-          a breast cancer campaign and learning the ins and outs of appealing to
-          different age groups and when to capitalize on a market.
+          This summer, I have been working on personal projects such as creating
+          my own Minesweeper game and PyTracker, a webapp that helps track one's
+          health statistics. In addition to these projects, I'm taking an
+          introductory business class to get started on my minor.
         </p>
       </section>
 
@@ -126,7 +126,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated May 27, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated July 23, 2021</p>
     </footer>
   </body>
 </html>
