--- a/education.html
+++ b/education.html
@@ -24,6 +24,7 @@
             <!--unordered list-->
             <a href="https://jessie20022.github.io/">home</a>
             <a href="education.html">education</a>
+            <a href="projects.html">projects</a>
             <a href="blog.html">blog</a>
             <a href="relax.html">relax</a>
             <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
