--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!--unordered list-->
             <a href="https://jessie20022.github.io/">home</a>
             <a href="education.html">education</a>
+            <a href="projects.html">projects</a>
             <a href="blog.html">blog</a>
             <a href="relax.html">relax</a>
             <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
@@ -91,6 +92,10 @@
         <p>
           <a href="education.html">education</a>
           : a summary of educational institutions and coursework
+        </p>
+        <p>
+          <a href="projects.html">projects</a>
+          : a list of the projects I'm working on/have worked on
         </p>
         <p>
           <a href="blog.html">blog</a> : a blurb of my thoughts on random topics
