after fall semester

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="projects.html">projects</a>
             <a href="blog.html">blog</a>
             <a href="relax.html">relax</a>
-            <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
+            <a href="docs/resume.pdf">resume</a>
           </ul>
         </nav>
       </h2>
@@ -44,28 +44,27 @@
         <h3>currently...</h3>
         <p>
           At UMD, I study computer science. I would also love to be involved in
-          research for in computer and information science in the future. Along
-          the way, I've met some amazing educators who gave me unparalleled
+          research for computer and information science in the future. Along the
+          way, I've met some amazing educators who gave me unparalleled
           instruction and opportunities, leading to my decision to double minor
-          in mathematics and business analytics. While I love studying these
+          in statistics and business analytics. While I love studying these
           three subjects, I also have an interest for neuroscience and
           psychology that I developed in high school.
         </p>
         <p>
-          This summer, I have been working on personal projects such as creating
-          my own Minesweeper game and PyTracker, a webapp that helps track one's
-          health statistics. In addition to these projects, I'm taking an
-          introductory business class to get started on my minor.
+          I have been working on personal projects such as creating my own
+          Minesweeper game and PyTracker, a webapp that helps track one's health
+          statistics. The progress is quite slow, but not sedentary.
         </p>
       </section>
 
       <section>
         <h3>previously...</h3>
         <p>
-          This past spring semester, I've been working as an intern at Exerceo
-          in a professional mentorship program while using Linux and text
-          editors on Fedora in Java and JavaScript in order to create an
-          inventory that can store items.
+          During the spring of 2021, I worked as an intern at Exerceo in a
+          professional mentorship program while using Linux and text editors on
+          Fedora in Java and JavaScript in order to create an inventory that can
+          store items.
         </p>
         <p>
           In high school, I participated in FIRST robotics where I helped with
@@ -78,11 +77,11 @@
         <h3>for fun...</h3>
         <p>
           Beyond my academic interests, I love to spent my time playing tennis,
-          piano, and a few games such as Valorant or Minecraft. With friends, I
-          love to go to new places, whether it be educational or for fun, to
-          create memories and take pictures (scroll down!). For personal
-          improvement, I like to write in my journal, improve my Chinese, and
-          sometimes run.
+          piano, and a few games such as Valorant, Minecraft, and Clash Royale.
+          With friends, I love to go to new places, whether it be educational or
+          for fun, to create memories and take pictures (scroll down!). For
+          personal improvement, I like to write in my journal, improve my
+          Chinese, and occasionally work out.
         </p>
       </section>
 
@@ -104,10 +103,7 @@
           <a href="relax.html">relax</a>: a page dedicated to links that give
           you a break from whatever you're working on
         </p>
-        <p>
-          <a href="docs/Resume--Summer2021.docx.pdf">resume</a> : a copy of my
-          resume
-        </p>
+        <p><a href="docs/resume.pdf">resume</a> : a copy of my resume</p>
         <!--add the other page links here-->
       </section>
 
@@ -131,7 +127,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated July 23, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated December 25, 2021</p>
     </footer>
   </body>
 </html>
