--- a/relax.html
+++ b/relax.html
@@ -76,6 +76,10 @@
               href="https://open.spotify.com/playlist/5RATcyr08kEZMsDx8qblZG?si=f349655d3feb4337"
               ><img src="img/home playlist.PNG" alt="home playlist"
             /></a>
+            <a
+              href="https://open.spotify.com/playlist/1xbQujt4ONUhaBZLHH2TNg?si=2b6e4a4ce4124762"
+              ><img src="img/throwback playlist.PNG" alt="throwback playlist"
+            /></a>
           </ul>
         </nav>
       </section>
@@ -130,13 +134,15 @@
             <a href="https://archive.org/web/">go back in time</a>
             <p></p>
             <a href="https://codepen.io/akm2/full/rHIsa">change gravity</a>
+            <p></p>
+            <a href="https://monkeytype.com/">typing test!</a>
           </ul>
         </nav>
       </section>
     </main>
     <footer>
       <p style="margin-left: 2.5rem">
-        Copyright &copy; Jessica Wu; updated May 27, 2021
+        Copyright &copy; Jessica Wu; updated December 25, 2021
       </p>
     </footer>
   </body>
