--- a/education.html
+++ b/education.html
@@ -76,12 +76,13 @@
           <ul>
             <li style="margin-left: 2rem">University Honors Program</li>
             <li style="margin-left: 2rem">
-              Minor: Mathematics, Business Analytics
+              Minor: Statistics, Business Analytics
             </li>
             <li style="margin-left: 2rem">GPA: 4.0, Major GPA: 4.0</li>
             <li style="margin-left: 2rem">
               Relevant coursework: Object Oriented Programming I/II,
-              Introduction to Linear Algebra, Discrete Structures
+              Introduction to Linear Algebra, Discrete Structures, Introduction
+              to Computer Systems, Applied Probability and Statistics I
             </li>
           </ul>
         </nav>
@@ -306,7 +307,7 @@
           <p style="margin-left: 1rem">Summer 2021</p>
           <nav>
             <ul>
-              <li>BMGT110: Introduction to the Business Value Chain</li>
+              <li>BMGT110: Introduction to the Business Value Chain (3)</li>
               <p>
                 Course Description: Students are provided with an introduction
                 to the business value chain with an emphasis on
@@ -327,11 +328,103 @@
             </ul>
           </nav>
         </section>
+
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Fall 2021</p>
+          <nav>
+            <ul>
+              <li>CMSC216: Introduction to Computer Systems (4)</li>
+              <p>
+                Course Description: Introduction to the interaction between user
+                programs and the operating system/hardware. Major topics include
+                C programming, introductory systems programming, and assembly
+                language. Other concepts covered include UNIX, machine data
+                representation, thread management, optimization, and virtual
+                memory. Programming is done in the Linux Environment.
+              </p>
+              <p>
+                Reflection: So far the most difficult class I've taken at UMD. I
+                know so many people blame the instructor for this one, but I
+                think we all could have studied harder. Subtle flex, but I've
+                had a 4.0 for 8 years. And this is the first class that I'm
+                getting a B in, post-curve. Pre-curve, I have a 65.something and
+                the average is a 63.something. I could go on and on about how it
+                was a different professor making everything more difficult and
+                unusual as people did on rate my professor, but I won't.
+                Genuinly just a difficult class that is quite different from all
+                the other CS classes so far and it requires different attention.
+                I'm really hoping I learned from this experience and change my
+                approach to the rest of the semesters.
+              </p>
+              <li>STAT400: Applied Probability and Statistics I (3)</li>
+              <p>
+                Course Description: Random variables, standard distributions,
+                moments, law of large numbers and central limit theorem.
+                Sampling methods, estimation of parameters, testing of
+                hypotheses.
+              </p>
+              <p>
+                Reflection: One of the most enjoyable classes. I think it was
+                the way that the class was structured, but it didn't seem too
+                difficult. The numerous examples provided definitely helped with
+                my success in the class. Mazzullo is the best!
+              </p>
+              <li>INST123: Databases for All (3)</li>
+              <p>
+                Course Description: An introduction to relational databases for
+                students with no previous programming experience. Provides a
+                means for students of diverse backgrounds to successfully learn
+                how to store, retrieve, and maintain data in relational
+                databases. Topics include a brief comparison of database systems
+                with an emphasis on relational databases, fundamental relational
+                database concepts, and data types. Includes technical approaches
+                to accessing information stored in relational databases.
+              </p>
+              <p>
+                Reflection: Great introduction to SQL. To be honest, I was wary
+                about taking this class because I had dropped ENES100 for this
+                and wasn't sure about the workload. Thankfully, it wasn't bad at
+                all. The workload was entirely manageable and there wasn't a
+                final exam at the end, which saved me studying time since I had
+                two finals already. The group project honestly was kinda nice
+                because I got to meet some other people, but it wasn't something
+                that you could blow off.
+              </p>
+              <li>
+                HNUH268Y: The Politics of Disability: Life Narratives & Identity
+                (3)
+              </li>
+              <p>
+                Course Description: The politics of disability are fraught and
+                contentious. This course takes up the experience of disability
+                by asking how and why differently-abled bodies are excluded,
+                marginalized, or threatened. Students will examine these
+                questions through the psychosocial and cultural history of
+                disability, as well as through life narratives and real-world
+                exploration. Beginning with the history of disability, students
+                will gain an understanding of how current disability identity
+                and culture has develop in the US. Students will experience and
+                also produce personal life narratives related to bodily politics
+                and gain insights that help them navigate the politics and
+                participate in the change-making advocacy of disability.
+              </p>
+              <p>
+                Reflection: I feel like I've been pretty lucky with the honors
+                classes I've chosen. All of the classes I've chosen have been
+                entirely reasonable with workload and expectations. I know some
+                of the other classes are so much harder and so much heavier in
+                workload and extremely high grading expectations. I feel like
+                this class was so great and educated me so much on disability. I
+                also had a super fun time working on the final project.
+              </p>
+            </ul>
+          </nav>
+        </section>
       </section>
     </main>
     <footer>
       <p style="margin-left: 2.5rem">
-        Copyright &copy; Jessica Wu; updated July 23, 2021
+        Copyright &copy; Jessica Wu; updated December 25, 2021
       </p>
     </footer>
   </body>
