--- a/blog.html
+++ b/blog.html
@@ -32,9 +32,18 @@
         </nav>
       </h2>
     </header>
-    <main><p>Under contruction.... come back in a bit :)</p></main>
+    <main>
+      <h3>
+        <a style="color: darkolivegreen" href="bp1.html"
+          >semester 3 of college, semester 1 of in-person education; studying
+          for CS?</a
+        >
+      </h3>
+      <p>december 27, 2021</p>
+      <p></p>
+    </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated May 23, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated December 27, 2021</p>
     </footer>
   </body>
 </html>
