--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
     </header>
     <main>
       <h3>
-        <a style="color: darkolivegreen" href="bp1.html"
+        <a style="color: darkolivegreen" href="blogPosts/bp1.html"
           >semester 3 of college, semester 1 of in-person education; studying
           for CS?</a
         >
