--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </header>
     <main>
       <p>
-        Hi! I'm Jessica, a sophomore at the University of Maryland. I was born
-        and raised in Maryland, but I love to travel and explore new places. I
-        also love to learn new things--especially if it's through a hands-on
+        Hi! I'm Jessica, a junior at the University of Maryland. I was born and
+        raised in Maryland, but I love to travel and explore new places. I also
+        love to learn new things--especially if it's through a hands-on
         activity.
       </p>
 
@@ -60,6 +60,13 @@
 
       <section>
         <h3>previously...</h3>
+        <p>
+          This past summer of 2022, I interned at Motorola Solutions as a
+          Pre-Sales System Engineer. My team taught me how to design and quote
+          radio frequency systems. I also got to work in Google Apps Scripts
+          (Javascript) and code various automation tools to help my team make
+          quoting faster.
+        </p>
         <p>
           During the spring of 2021, I worked as an intern at Exerceo in a
           professional mentorship program while using Linux and text editors on
