october update, still need to finish blog post

--- a/blogPosts/bp2.html
+++ b/blogPosts/bp2.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--helps for non-computer devices-->
     <title>Jessica Wu | Blog</title>
-    <link rel="stylesheet" href="stylesBlog.css" />
+    <link rel="stylesheet" href="stylesBlogPosts.css" />
   </head>
   <body>
     <header>
@@ -33,22 +33,18 @@
       </h2>
     </header>
     <main>
-      <h3>
-        <a style="color: darkolivegreen" href="blogPosts/bp2.html"
-          >alone in chicago.
-        </a>
-      </h3>
-      <p>october 5, 2022</p>
-        <a style="color: darkolivegreen" href="blogPosts/bp1.html"
-          >semester 3 of college, semester 1 of in-person education; studying
-          for CS?
-        </a>
-      </h3>
-      <p>december 27, 2021</p>
-      <p></p>
+      <section>
+        <h3>alone in chicago.</h3>
+        <p>October 5, 2022</p>
+        <p>
+          I was fighting back tears when my parents dropped me off in Chicago.
+          It felt like they were abandoning me, even though it was my choice to
+          move to Chicago this summer.
+        </p>
+      </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>
+      <!--<p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>-->
     </footer>
   </body>
 </html>
