--- a/education.html
+++ b/education.html
@@ -83,8 +83,10 @@
               Relevant coursework: Object Oriented Programming I/II,
               Introduction to Linear Algebra, Discrete Structures, Databases for
               All, Introduction to Computer Systems, Applied Probability and
-              Statistics I, Algorithms, Organization of Programming Languages,
-              Introduction to Statistical Computing with SAS
+              Statistics I/II, Algorithms, Organization of Programming
+              Languages, Introduction to Statistical Computing with SAS,
+              Introduction to Data Science, Advanced Data Structures, Database
+              Systems
             </li>
           </ul>
         </nav>
@@ -514,11 +516,71 @@
             </ul>
           </nav>
         </section>
+
+        <section class="normal-box">
+          <p style="margin-left: 1rem">Fall 2022</p>
+          <nav>
+            <ul>
+              <li>BMGT332: Quantitative Models for Management Decisions</li>
+              <p>
+                Course Description: The aim of this course is to introduce
+                management science techniques for informed decision-making that
+                can be applied in spreadsheet models to assist in the
+                decision-analysis process. Models include Linear Programming,
+                Transportation and Assignment problems, network flow models,
+                Integer and non-linear programming, Simulation and Decision
+                Trees.
+              </p>
+              <p>Reflection: In progress!</p>
+              <li>BMGT402: Database Systems</li>
+              <p>
+                Course Description: The fundamentals of database management
+                systems (DBMS), data models, query processing, and data
+                warehouses, and their application in the development of business
+                information systems will be covered. An important goal of this
+                course is to understand the value of information resources and
+                information management challenges within an organization.
+              </p>
+              <p>Reflection: In progress!</p>
+              <li>CMSC320: Introduction to Data Science</li>
+              <p>
+                Course Description: An introduction to the data science
+                pipeline, i.e., the end-to-end process of going from
+                unstructured, messy data to knowledge and actionable insights.
+                Provides a broad overview of several topics including
+                statistical data analysis, basic data mining and machine
+                learning algorithms, large-scale data management, cloud
+                computing, and information visualization.
+              </p>
+              <p>Reflection: In progress!</p>
+              <li>CMSC420: Advanced Data Structures</li>
+              <p>
+                Course Description: Description, properties, and storage
+                allocation functions of data structures including balanced
+                binary trees, B-Trees, hash tables, skiplists, tries, KD-Trees
+                and Quadtrees. Algorithms for manipulating structures.
+                Applications from areas such as String Processing, Computer
+                Graphics, Information Retrieval, Computer Networks, Computer
+                Vision, and Operating Systems.
+              </p>
+              <p>Reflection: In progress!</p>
+              <li>STAT401: Applied Probability and Statistics II</li>
+              <p>
+                Course Description: Point estimation - unbiased and consistent
+                estimators. Interval estimation. Minimum variance and maximum
+                likelihood estimators. Testing of hypotheses. Regression,
+                correlation and analysis of variance. Sampling distributions.
+                Elements of non-parametric methods.
+              </p>
+              <p>Reflection: In progress!</p>
+            </ul>
+          </nav>
+        </section>
       </section>
     </main>
     <footer>
       <p style="margin-left: 2.5rem">
-        Copyright &copy; Jessica Wu; updated December 25, 2021
+        Copyright &copy; Jessica Wu; updated October 5, 2022
       </p>
     </footer>
   </body>
