--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
         <h3>currently...</h3>
         <p>
           At UMD, I study computer science. I would also love to be involved in
-          research for computer and information science in the future. Along the
-          way, I've met some amazing educators who gave me unparalleled
-          instruction and opportunities, leading to my decision to double minor
-          in statistics and business analytics. While I love studying these
-          three subjects, I also have an interest for neuroscience and
-          psychology that I developed in high school.
+          research for computer and data science in the future. Along the way,
+          I've met some amazing educators who gave me unparalleled instruction
+          and opportunities, leading to my decision to double minor in
+          statistics and business analytics. While I love studying these three
+          subjects, I also have an interest for neuroscience and psychology that
+          I developed in high school.
         </p>
         <p>
           I have been working on personal projects such as creating my own
           Minesweeper game and PyTracker, a webapp that helps track one's health
           statistics. The progress is quite slow, but not sedentary.
+        </p>
+        <p>
+          At the moment, I'm interning with Akira Technologies where I am a Data
+          Science Analyst Intern. Here, I am working with another intern to
+          create a Python project for data pipeline observability.
         </p>
       </section>
 
@@ -62,10 +67,10 @@
         <h3>previously...</h3>
         <p>
           This past summer of 2022, I interned at Motorola Solutions as a
-          Pre-Sales System Engineer. My team taught me how to design and quote
-          radio frequency systems. I also got to work in Google Apps Scripts
-          (Javascript) and code various automation tools to help my team make
-          quoting faster.
+          Pre-Sales System Engineer. During my time in Chicago, my team taught
+          me how to design and quote radio frequency systems. I also got to work
+          in Google Apps Scripts (Javascript) and code various automation tools
+          to help my team make quoting faster.
         </p>
         <p>
           During the spring of 2021, I worked as an intern at Exerceo in a
@@ -134,7 +139,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated December 25, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>
     </footer>
   </body>
 </html>
