--- a/relax.html
+++ b/relax.html
@@ -136,13 +136,17 @@
             <a href="https://codepen.io/akm2/full/rHIsa">change gravity</a>
             <p></p>
             <a href="https://monkeytype.com/">typing test!</a>
+            <p></p>
+            <a href="https://www.boredbutton.com/random">when you're bored</a>
+            <p></p>
+            <a href="http://littlealchemy.com/">into elements?</a>
           </ul>
         </nav>
       </section>
     </main>
     <footer>
       <p style="margin-left: 2.5rem">
-        Copyright &copy; Jessica Wu; updated December 25, 2021
+        Copyright &copy; Jessica Wu; updated October 5, 2022
       </p>
     </footer>
   </body>
