--- a/blogPosts/bp2.html
+++ b/blogPosts/bp2.html
@@ -39,12 +39,66 @@
         <p>
           I was fighting back tears when my parents dropped me off in Chicago.
           It felt like they were abandoning me, even though it was my choice to
-          move to Chicago this summer.
+          move to Chicago this summer. I felt like a small bug about to get
+          squashed by this whole new city, but I knew this meant that I had a
+          lot to learn.
+        </p>
+        <p>
+          I don't regret it now, but the first two weeks there, I wished I could
+          go back home with my parents. I felt so sad and lonely that I bought
+          myself a plane ticket home for father's day/July 4th with an excuse to
+          celebrate with family, but in reality, I really just didn't want to be
+          alone in a city anymore. My mom told me I needed to toughen out,
+          because if I couldn't handle being alone in Chicago for a summer, how
+          was I going to grow up and live on my own god-knows-where? Being home
+          taught me that I really need to treasure the time I have left in the
+          city. Upon my return, all of July was filled with fun memories with my
+          friends from home visiting me. There was never a break where I lived
+          by myself in Chicago that month.
+        </p>
+        <p>
+          My best friends took turns visiting me in Chicago. I went
+          <a href="https://wateriders.com/">kayaking</a>, all the touristy
+          spots, shopping, and more. My two biggest highlights were going to
+          <a
+            href="https://www.youtube.com/watch?v=r5KV2e_xGjI&t=3934s&ab_channel=CRSLive"
+            >The Weeknd's Concert</a
+          >
+          and <a href="https://www.lollapalooza.com/">Lollapalooza</a>. I don't
+          know if I would have gone to either of those without coming to
+          Chicago. I was finally living up to what I had hoped Chicago would be.
+        </p>
+        <p>
+          Aside from my experiences, I lived up to what I had hoped for myself
+          regarding my internship. I was supportive to the team, completed all
+          my tasks, and challenged myself to do as much as I could. I found it
+          such a rewarding experience, crucial as it was my first real
+          internship experience. I am forever thankful for
+          <a href="https://www.motorolasolutions.com/en_us.html"
+            >Motorola Solutions</a
+          >, my manager Oriana, and my team.
+        </p>
+        <p>
+          When it was time for me to leave, I was disappointed my journey in the
+          city was coming to an end. I still remember how it smelled in my
+          <a href="https://decolakeshoredrive.com/">apartment</a>, how the
+          breeze hit my face looking over the lake, how the plants on the
+          sidewalk were always lively-looking, the random spiderman on top of
+          the bus stop, and how loudly my friend and I screamed when we found a
+          bug at the end of my bed at 3 AM. I learned a lot about how to live on
+          my own, valuable to me for the rest of my life. These are things I
+          will never forget, and I am grateful I spent my summer alone in
+          Chicago.
+        </p>
+
+        <p>
+          <img src="img/bp2kayak.JPG" alt="kayaking" />
+          <img src="img/bp2lollapalooza.jpg" alt="lollapalooza" />
         </p>
       </section>
     </main>
     <footer>
-      <!--<p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>-->
+      <!--<p>Copyright &copy; Jessica Wu; updated December 23, 2022</p>-->
     </footer>
   </body>
 </html>
