--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,9 @@
       </h3>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>
+      <p style="font-size: 15px">
+        Copyright &copy; Jessica Wu; updated October 5, 2022
+      </p>
     </footer>
   </body>
 </html>
