bp2 images still not working

--- a/blogPosts/bp2.html
+++ b/blogPosts/bp2.html
@@ -92,8 +92,8 @@
         </p>
 
         <p>
-          <img src="img/bp2kayak.JPG" alt="kayaking" />
-          <img src="img/bp2lollapalooza.jpg" alt="lollapalooza" />
+          <img src="img/bp2kayak.png" alt="kayaking" />
+          <img src="img/bp2lollapalooza.png" alt="lollapalooza" />
         </p>
       </section>
     </main>
