--- a/projects.html
+++ b/projects.html
@@ -34,19 +34,15 @@
     </header>
     <main>
       <p>
-        Currently, I am working on two projects. The first one is a game of
-        Minesweeper. I've loved playing minesweeper since my father taught me as
-        a child. I thought that it would be sweet to have this be one of the
-        last coding projects I do while living at home.
+        <a href="https://jessie20022.github.io/cmsc320finalproject"
+          >Analysis on UMD's Grade Data</a
+        >
       </p>
 
       <p>
-        Another project I am working on is PyTracker. It is in the beginning
-        stages of development, but I have created an entire map for this
-        project. I have decided to ask a friend for help on some of the back-end
-        work, while I do most of the front-end and some of the back-end work.
-        Essentially, PyTracker will help the user track his sleep, reaction
-        times, and gather statistics for the data.
+        Pytracker is in the beginning stages of development, but I have created
+        an entire map for this. Essentially, PyTracker will help the user track
+        his sleep, reaction times, and gather statistics for the data.
       </p>
 
       <p>More information (and better layout) to come :)</p>
