--- a/projects.html
+++ b/projects.html
@@ -38,17 +38,27 @@
           >Analysis on UMD's Grade Data</a
         >
       </p>
-
       <p>
-        Pytracker is in the beginning stages of development, but I have created
-        an entire map for this. Essentially, PyTracker will help the user track
-        his sleep, reaction times, and gather statistics for the data.
+        A final project in CMSC320 done with two other group members to analyze
+        the grade data of CMSC and KNES courses at UMD.
+      </p>
+      <br />
+      <p>
+        <a href="https://jessie20022.github.io/PyTracker">PyTracker</a>
+      </p>
+      <p>
+        Pytracker is in the beginning stages of development, but the backbone of
+        the project has been created in MySQL. Essentially, PyTracker will help
+        the user track his sleep, reaction times, and gather statistics for the
+        data.
       </p>
 
-      <p>More information (and better layout) to come :)</p>
+      <br />
+
+      <p>More information to come :)</p>
     </main>
     <footer>
-      <p>Copyright &copy; Jessica Wu; updated July 23, 2021</p>
+      <p>Copyright &copy; Jessica Wu; updated January 23, 2023</p>
     </footer>
   </body>
 </html>
